@@ -10,9 +10,10 @@ Change some more of the timing for the idle/throttle speed code
 
 Updated to zlib 1.2.11
 
-*** ROM SUPPORT *** Thanks to Flipprojets.fr for all the GTS80b-sets (plus Free Play patches), ipdb.org, exegeta
+*** ROM SUPPORT *** Thanks to Flipprojets.fr for all the GTS80b-sets (plus Free Play patches), ipdb.org, exegeta for all the LTD and Taito games and clones
 New:
-Volley (formerly known as Voley Ball and missing most dumps)
+LTD: Arizona, Columbia, Cowboy Eight Ball, Disco Dancing, Force, Haunted Hotel, Hustler, Martian Queen, King Kong, Space Poker, Time Machine, Trick Shooter, Viking King
+Taito: Volley (formerly known as Voley Ball and missing most dumps)
 
 Clones:
 Amazon Hunt II (French Free Play)
@@ -126,6 +127,7 @@ Victory (French)
 Victory (French Free Play)
 Victory (German)
 Victory (German Free Play)
+Zephy (alternate set)
 
 
 
